Minor cleanup in java code (#981)